[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rgb-weaver"
version = "2.0.0"
description = "Enhanced terrain RGB raster tile generator with multiple output formats"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Australes Inc", email = "diegoposba@gmail.com"}]
keywords = [
    "terrain", "rgb", "tiles", "dem", "mbtiles", "pmtiles", 
    "gis", "raster", "elevation", "topography", "mapping"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "rasterio>=1.3.0", 
    "numpy>=1.20.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "black>=21.0.0",
    "flake8>=3.9.0",
]
test = [
    "pytest>=6.0.0", 
    "pytest-cov>=2.12.0",
]

[project.scripts]
rgb-weaver = "rgbweaver.cli:cli"

[project.urls]
Homepage = "https://github.com/Australes-Inc/rgb-weaver"
Repository = "https://github.com/Australes-Inc/rgb-weaver"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["rgbweaver*"]

[tool.setuptools.package-data]
rgbweaver = ["bin/pmtiles-*"]